# webscrapping-meugov

./: README.md  dashboard.py  main.py  pyproject.toml
data/: .~lock.final_data_2024-11-05.csv#  anexo_16261_Coordenadas_Sedes_5565_Municípios_2010.xlsx  final_data_com_coordenadas.csv  meugov_period_extraction_2024-11-05.csv
src/: coordinates.py  scrapper.py
tests/: test.py  test2.py
